@@ -46,6 +46,9 @@ void *memset (void *s, int c, size_t n)
               defined (__SDCC_z80) ||\
               defined (__SDCC_z180) ||\
               defined (__SDCC_z80n))
+#ifdef __SDCC_BROKEN_STRING_FUNCTIONS      
+#error Unimplemented broken string function
+#endif    
 __naked
 {
   (void)s;
@@ -72,39 +75,38 @@ __naked
   __endasm;
 }
 #elif !defined (_SDCC_NO_ASM_LIB_FUNCS) && defined(__SDCC_gbz80)
+#ifdef __SDCC_BROKEN_STRING_FUNCTIONS      
+#error Unimplemented broken string function
+#endif  
 __naked
 {
-  (void)s;
-  (void)c;
-  (void)n;
-  __asm
-    ldhl  sp,#2
-    ld    e, (hl)
-    inc   hl
-    ld    d, (hl)
-    inc   hl
-    ld    a, (hl)
-    inc   hl
-#ifndef __SDCC_BROKEN_STRING_FUNCTIONS
-    inc   hl
-#endif
-    ld    c, (hl)
-    inc   hl
-    ld    b, (hl)
-    ld    l, e
-    ld    h, d
-    inc   b
-    inc   c
-    jr    20$
-10$:
-    ld    (hl+),a
-20$:
-    dec   c
-    jr    NZ, 10$
-    dec   b
-    jr    NZ, 10$
-    ret
-  __endasm;
+	(void)s;
+	(void)c;
+	(void)n;
+__asm
+	ld	a, c
+	ldhl	sp,	#2
+	ld	c, (hl)
+	inc	hl
+	ld	b, (hl)
+	ld	l, e
+	ld	h, d
+	inc	c
+	inc	b
+	jr	test
+loop:
+	ld	(hl+), a
+test:
+	dec	c
+	jr	NZ, loop
+	dec	b
+	jr	NZ, loop
+	ld	c, e
+	ld	b, d
+	pop	hl
+	pop	af
+	jp	(hl)
+__endasm;
 }
 #else
 {
